Light name changes

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ProductDetailsActivity"
+    tools:context="pl.szop.cardeal.views.ProductDetailsActivity"
     android:id="@+id/content">
     <!--<android.support.v4.view.ViewPager android:id="@+id/images"-->
         <!--android:layout_width="match_parent"-->
@@ -13,7 +13,7 @@
     <fragment android:id="@+id/images_fragment"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:name="pl.szop.andrzejshop.views.ImagesFragment"></fragment>
+        android:name="pl.szop.cardeal.views.ImagesFragment"></fragment>
     <FrameLayout android:id="@+id/products_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
