--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ProductsActivity">
+    tools:context="pl.szop.cardeal.views.ProductsActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
