--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.DescriptionFragment">
+    tools:context="pl.szop.cardeal.views.DescriptionFragment">
 
     <TextView android:id="@+id/description"
         android:layout_width="match_parent"
