--- a/app/src/main/res/layout/fragment_products_list.xml
+++ b/app/src/main/res/layout/fragment_products_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ProductsListFragment">
+    tools:context="pl.szop.cardeal.views.ProductsListFragment">
 
     <android.support.v7.widget.RecyclerView android:id="@+id/products_list"
         android:layout_width="match_parent"
