--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.szop.andrzejshop.views.ImageActivity">
+    tools:context="pl.szop.cardealshop.views.ImageActivity">
 
     <fragment android:id="@+id/images_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="pl.szop.andrzejshop.views.ImagesFragment"/>
+        android:name="pl.szop.cardealshop.views.ImagesFragment"/>
 
 </android.support.design.widget.CoordinatorLayout>
