--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -12,7 +12,7 @@
         android:maxWidth="150dp"
         android:adjustViewBounds="true"
 
-        />
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/title"
