--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorTlo"
     tools:context=".views.ProductDetailsActivity"
     android:id="@+id/content">
     <!--<android.support.v4.view.ViewPager android:id="@+id/images"-->
