--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -10,6 +10,6 @@
     <fragment android:id="@+id/images_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="pl.szop.andrzejshop.views.ImagesFragment"/>
+        android:name="pl.szop.cardealshop.views.ImagesFragment"/>
 
 </android.support.design.widget.CoordinatorLayout>
