--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="51dp"
         android:background="@color/colorPrimary"
-        android:text="Fantasy"
+        android:text="Sportowe"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title2" />
@@ -37,7 +37,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="51dp"
         android:background="@color/colorPrimary"
-        android:text="SCI-FI"
+        android:text="Sedan"
         app:layout_constraintStart_toEndOf="@+id/button_fantasy"
         app:layout_constraintTop_toBottomOf="@+id/title2" />
 
@@ -48,7 +48,7 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="23dp"
         android:background="@color/colorPrimary"
-        android:text="Thriller"
+        android:text="Coupe"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_fantasy" />
 
@@ -59,7 +59,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="23dp"
         android:background="@color/colorPrimary"
-        android:text="Criminal"
+        android:text="Kombi"
         app:layout_constraintStart_toEndOf="@+id/button_thriller"
         app:layout_constraintTop_toBottomOf="@+id/button_scifi" />
 
