--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -29,21 +29,23 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="117dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="143dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="96dp"
+        android:onClick="showCategory"
         android:text="Kategorie"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="98dp"
+        android:id="@+id/productlistbtn"
+        android:layout_width="142dp"
         android:layout_height="56dp"
         android:layout_marginTop="96dp"
-        android:layout_marginEnd="52dp"
-        android:text="Button"
+        android:layout_marginEnd="32dp"
+        android:onClick="showProductList"
+        android:text="Lista produktów"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,7 +67,7 @@
         android:layout_marginEnd="55dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/productlistbtn" />
 
     <Button
         android:id="@+id/button8"
