--- a/app/src/main/res/layout/x_activity_splash.xml
+++ b/app/src/main/res/layout/x_activity_splash.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/productlistbtn"
         android:layout_width="98dp"
         android:layout_height="56dp"
         android:layout_marginTop="42dp"
@@ -44,7 +44,7 @@
         android:layout_marginEnd="55dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/productlistbtn" />
 
     <Button
         android:id="@+id/button8"
