--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPrice">#ff0004</color>
     <color name="colorBackground">#0d2133</color>
     <color name="colorTlo">#0d2133</color>
+    <color name="colorBtn">#006e14</color>
 </resources>
