--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -50,12 +50,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="98dp"
+        android:id="@+id/basic_list_btn"
+        android:layout_width="145dp"
         android:layout_height="56dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="28dp"
-        android:text="Button"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:onClick="showBasicList"
+        android:text="Lista"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -63,8 +64,8 @@
         android:id="@+id/button7"
         android:layout_width="98dp"
         android:layout_height="56dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="76dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productlistbtn" />
@@ -79,7 +80,7 @@
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/basic_list_btn" />
 
     <Button
         android:id="@+id/button10"
