--- a/app/src/main/res/layout/x_activity_splash.xml
+++ b/app/src/main/res/layout/x_activity_splash.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/basic_list_btn"
         android:layout_width="98dp"
         android:layout_height="56dp"
         android:layout_marginStart="61dp"
@@ -56,7 +56,7 @@
         android:text="Button"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/basic_list_btn" />
 
     <Button
         android:id="@+id/button10"
