--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorTlo"
-    tools:context="pl.szop.andrzejshop.views.ButtonsActivity">
+    tools:context="pl.szop.cardeal.views.ButtonsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
