--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.szop.andrzejshop.views.CartActivity">
+    tools:context="pl.szop.cardeal.views.CartActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
