--- a/app/src/main/res/layout/content_cart.xml
+++ b/app/src/main/res/layout/content_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="pl.szop.andrzejshop.views.CartActivity"
+    tools:context="pl.szop.cardeal.views.CartActivity"
     tools:showIn="@layout/activity_cart">
     <android.support.v7.widget.RecyclerView android:id="@+id/favorites_list"
         android:layout_width="match_parent"
