--- a/app/src/main/res/layout/fragment_products_grid.xml
+++ b/app/src/main/res/layout/fragment_products_grid.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ProductsGridFragment">
+    tools:context="pl.szop.cardeal.views.ProductsGridFragment">
 
     <GridView android:id="@+id/products_grid"
         android:layout_width="match_parent"
