--- a/app/src/main/res/layout/x_grid_item.xml
+++ b/app/src/main/res/layout/x_grid_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.szop.cardeal.views.Dialogsorting">
+    tools:context="pl.szop.andrzejshop.views.Dialogsorting">
 
     <TextView
         android:id="@+id/griddata"
