--- a/app/src/main/res/layout/fragment_products_grid.xml
+++ b/app/src/main/res/layout/fragment_products_grid.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorTlo"
     tools:context=".views.ProductsGridFragment">
 
     <GridView android:id="@+id/products_grid"
