--- a/app/src/main/res/layout/switch_item.xml
+++ b/app/src/main/res/layout/switch_item.xml
@@ -1,7 +1,9 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorTlo"
+    >
 
     <Switch
         android:layout_width="wrap_content"
