--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -7,6 +7,27 @@
     android:background="@color/colorTlo"
     tools:context="pl.szop.andrzejshop.views.ButtonsActivity">
 
+    <TextView
+        android:id="@+id/title3"
+        android:layout_width="250dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="23dp"
+        android:fontFamily="monospace"
+        android:lineSpacingExtra="8sp"
+        android:text="CarDeal"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:typeface="normal"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
@@ -29,21 +50,24 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="143dp"
+        android:layout_width="151dp"
         android:layout_height="59dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="364dp"
+        android:background="@color/colorBtn"
         android:onClick="showCategory"
         android:text="Kategorie"
+        android:textColor="@color/vpi__background_holo_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/productlistbtn"
-        android:layout_width="142dp"
+        android:layout_width="156dp"
         android:layout_height="56dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="368dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorBtn"
         android:onClick="showProductList"
         android:text="Lista produktów"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,10 +75,11 @@
 
     <Button
         android:id="@+id/basic_list_btn"
-        android:layout_width="145dp"
+        android:layout_width="152dp"
         android:layout_height="56dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/colorBtn"
         android:onClick="showBasicList"
         android:text="Lista"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,77 +87,29 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="145dp"
+        android:layout_width="155dp"
         android:layout_height="56dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="12dp"
+        android:background="@color/colorBtn"
         android:onClick="showGridList"
         android:text="Grid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productlistbtn" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="98dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginBottom="43dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button10"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/basic_list_btn" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="98dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginBottom="38dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button12"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="98dp"
-        android:layout_height="56dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="38dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button13"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="98dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginBottom="45dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="98dp"
-        android:layout_height="56dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="45dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="98dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="55dp"
-        android:layout_marginBottom="43dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button11"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title3"
+        app:srcCompat="@drawable/audi2" />
 
 </android.support.constraint.ConstraintLayout>
