--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="364dp"
         android:background="@color/colorBtn"
         android:onClick="showCategory"
-        android:text="Kategorie"
+        android:text="Wyszukiwanie"
         android:textColor="@color/vpi__background_holo_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -65,8 +65,8 @@
         android:id="@+id/productlistbtn"
         android:layout_width="156dp"
         android:layout_height="56dp"
-        android:layout_marginTop="368dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="364dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/colorBtn"
         android:onClick="showProductList"
         android:text="Lista produktów"
@@ -77,17 +77,17 @@
         android:id="@+id/basic_list_btn"
         android:layout_width="152dp"
         android:layout_height="56dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
         android:background="@color/colorBtn"
         android:onClick="showBasicList"
-        android:text="Lista"
+        android:text="Galeria"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="155dp"
+        android:layout_width="159dp"
         android:layout_height="56dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="12dp"
