--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -80,7 +80,7 @@
         android:layout_marginStart="36dp"
         android:layout_marginTop="20dp"
         android:background="@color/colorBtn"
-        android:onClick="showBasicList"
+        android:onClick="showGallery"
         android:text="Galeria"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
