--- a/app/src/main/res/layout/view_pager.xml
+++ b/app/src/main/res/layout/view_pager.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    tools:context="pl.szop.andrzejshop.views.ViewPagerActivity">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager2"
+        android:id="@+id/viewPageAndroid"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
