--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -2,9 +2,9 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cart_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorTlo"
     tools:context="pl.szop.andrzejshop.views.CartActivity">
 
     <android.support.design.widget.AppBarLayout
