--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorTlo"
     android:layout_height="wrap_content">
     <ImageView android:id="@+id/cover"
         android:layout_width="150dp"
@@ -53,6 +52,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:adjustViewBounds="true"
+        android:background="@color/colorPrimaryDark"
         android:scaleType="fitCenter"
         android:src="@drawable/shopping"
         app:layout_constraintBottom_toBottomOf="@+id/cover"
