--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,42 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/miHome"
-        android:icon="@drawable/homek"
-        android:title="Home"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="@style/ToolbarTheme">
+    <item android:id="@+id/toggle_view"
+        android:icon="@drawable/grid"
+        app:showAsAction="always" />
+    <item android:id="@+id/cart_button"
+        android:icon="@drawable/shopping"
         app:showAsAction="always" />
 
     <item android:id="@+id/search_action"
-        android:title="@string/search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:title="Sort"
         app:showAsAction="ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" />
+
     <item
         android:id="@+id/miCompose"
         android:icon="@drawable/ic_compose"
-        android:title="Compose"
+        android:title="Category"
         app:showAsAction="ifRoom"></item>
     <item
         android:id="@+id/miProfile"
-        android:icon="@drawable/ic_profile"
-        android:title="Profile"
+        android:icon="@drawable/heart_selected"
+        android:title="Sort"
         app:showAsAction="always"></item>
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="Settings"
-        app:showAsAction="always"
-        android:visible="true" />
-
-    <item
-        android:id="@+id/action_login"
-        android:orderInCategory="100"
-        android:title="Log In"
-        app:showAsAction="never"
-        android:visible="true" />
 
 
 </menu>
