--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,22 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@fonts/Sacra</item>
     </style>
-
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@fonts/Sacra</item>
+    </style>
+    <style name="AppBarLayout" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:fontFamily">@fonts/Sacra</item>
+    </style>
     <style name="ActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/colorPrimary</item>
+        <item name="android:fontFamily">@fonts/Sacra</item>
         <item name="background">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
+        <item name="android:fontFamily">@fonts/Sacra</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
