--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -15,7 +15,7 @@
         android:maxWidth="150dp"
         android:maxHeight="150dp"
 
-        />
+        android:onClick="showGalleryfromProductList" />
 
     <TextView
         android:id="@+id/title"
