--- a/app/src/main/res/layout/activity_buttons.xml
+++ b/app/src/main/res/layout/activity_buttons.xml
@@ -75,13 +75,13 @@
 
     <Button
         android:id="@+id/basic_list_btn"
-        android:layout_width="152dp"
+        android:layout_width="146dp"
         android:layout_height="56dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:background="@color/colorBtn"
-        android:onClick="showGallery"
-        android:text="Galeria"
+        android:onClick="showFavourites"
+        android:text="Ulubione"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
